got everything running on digital ocean

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DB_USER=postgres
 DB_PASS=postgres
 DB_SERVICE=postgres
 DB_PORT=5432
+
+
+SECRET_KEY_TWO=ay6@_38!&p$eifd_c(hx8y6$8ea(oa(ocemhpvr^9n#qpf1h(-
