--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web:
-    restart: always
+
     build: ./web
     expose:
       - "8000"
@@ -15,10 +15,10 @@ services:
     env_file: .env
     environment:
       DEBUG: 'true'
-    command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+    command: /usr/local/bin/gunicorn simple_app.wsgi:application -w 2 -b :8000
 
   nginx:
-    restart: always
+
     build: ./nginx/
     ports:
       - "80:80"
@@ -28,7 +28,7 @@ services:
       - web:web
 
   postgres:
-    restart: always
+
     image: postgres:latest
     ports:
       - "5432:5432"
@@ -36,7 +36,7 @@ services:
       - pgdata:/var/lib/postgresql/data/
 
   redis:
-    restart: always
+
     image: redis:latest
     ports:
       - "6379:6379"
