--- a/production.yml
+++ b/production.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - web-static:/usr/src/app/static
     env_file: .env
-    command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+    command: /usr/local/bin/gunicorn simple_app.wsgi:application -w 2 -b :8000
 
   nginx:
     restart: always
